feat: make the plugin to be compatible with gradle configuraion cache